k8s/k8-customer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer-api-service
  template:
    metadata:
      labels:
        app: customer-api-service
    spec:
      containers:
        - name: customer-app-container
          image: ghcr.io/sagarsingh8978/customer-service-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          envFrom:                   # 🌟 INJECT THE CONFIGMAP HERE
            - configMapRef:
                name: customer-app-config
            - secretRef:
                name: customer-app-secrets  # 🔒 NEW: Injects sensitive variables
---
apiVersion: v1
kind: Service
metadata:
  name: customer-app-service
spec:
  type: ClusterIP
  selector:
    app: customer-api-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: customer-api-ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-app-service
                port:
                  number: 8081
